<resources>
    <string name="app_name">ImageView</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone_number">Phone:</string>
    <string name="first_name_hint">Please input your first name</string>
    <string name="last_name_hint">Please input your last name</string>
    <string name="phone_hint">Please input your phone number</string>
</resources>
